--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,3 @@
-server:
-  servlet:
-    context-path: /api/v1
-
 spring:
   application:
     name: taskify
@@ -13,6 +9,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
 
 outbound:
   identity:
